--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "portfolio",
+  "proxy": "http://localhost:8000",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
+    "axios": "^1.7.7",
     "framer-motion": "^11.3.30",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -15,6 +18,7 @@
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
     "react-scroll-to-top": "^3.0.0",
+    "react-toastify": "^10.0.5",
     "react-vertical-timeline-component": "^3.6.0",
     "typewriter-effect": "^2.21.0",
     "web-vitals": "^2.1.4"
